# datalogging

./: .gitignore  README.md  package-lock.json
client/: README.md  package-lock.json  package.json
client-rs/: .gitignore  Cargo.toml  README.md  build.sh  run.sh
client-rs/built/: index.html
client-rs/src/: lib.rs
client-rs/src/data/: backend.rs
client-rs/src/pages/: graphs.rs  mod.rs  root.rs
client/public/: index.html
client/src/: App.css  App.js  App.tsx  index.css  index.js  index.tsx  styles.module.css
client/src/data/: DatalogBufferStore.js  buffers.js  dataInterface.js  dataInterface.tsx  dataSourceInterface.js  frame.js  frame.tsx  realtimeBufferStore.js  types.tsx
client/src/state/: Channels.js  Datalogs.js  Datalogs.tsx  Layout.js  Layout.tsx
client/src/util/: backend.js  backend.tsx  constants.js  constants.tsx  misc.tsx  mousePos.js  mousePos.tsx
client/src/widgets/: Border.js  ChannelPanel.js  ChannelPanel.module.css  ChannelPanel.tsx  ChannelSettings.js  ChannelSettings.module.css  ChannelSettings.tsx  ColorPicker.js  ColorPicker.module.css  ColorPicker.tsx  CsvExportPanel.module.css  CsvExportPanel.tsx  DataSourcePanel.js  Graph.js  (+18 more)
data_collector/: README.md  data_collector.ino  data_format.json  file_io.h  file_io.ino  formatting.h  formatting.ino  generate_code.py  generated_format_info.h  read_file_test.sh  sd_performance_test.ino  serial_commands.h  serial_commands.ino  serial_test.sh  tasks.h  tasks.ino  test.h  test.ino  util.h  util.ino
data_packer/: README.md  data_packer.ino
data_router/: .gitignore  CMakeLists.txt  README.md  build.sh  expected_format.json  generate_code.py  run.sh
data_router/src/: command_worker.c  config.h  file_worker.c  main.c  realtime_stream_worker.c  sensor_read_worker.c  workers.c  workers.h
documentation/: README.md  data_format.md
server/: README.md  collectorComms.js  ipc.js  main.js  package-lock.json  package.json  run.sh
shared_resources/: README.md  default_info.json
