[package]
name = "client-rs"
version = "0.1.0"
authors = ["cpp-baja-sae <rrdscwqumorwekagyl@miucce.online>"]
edition = "2018"

# https://yew.rs/docs/en/getting-started/build-a-sample-app/

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook="0.1"
log = "0.4"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
yew = "0.17"
yew-router = "0.14"
